Update for latest libxayalib, also inckuding split in 'core' and 'utils'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS, true)
 set(BASE_DIR ./)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 find_package(xayagame REQUIRED)
+find_package(xayautil REQUIRED)
 find_package(jsoncpp REQUIRED)
 find_package(glog REQUIRED)
 find_package(gflags REQUIRED)
@@ -36,11 +37,12 @@ find_package(Protobuf REQUIRED)
 
 
 get_filename_component(HEADERS src REALPATH)
-include_directories(${LMDB_INCLUDE_DIR} ${ZMQ_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${GFLAGS_INCLUDE_DIR} ${PROTOBUF_INCLUDE_DIR} ${SQLITE3_INCLUDE_DIR} ${JSONRPCCCPCLIENT_INCLUDE_DIR} ${JSONRPCCCP_CLIENT_LIBRARY} ${JSONRPCCCP_SERVER_LIBRARY} ${JSONRPCCCP_COMMON_LIBRARY}${JSONCPP_INCLUDE_DIR} ${XAYAGAME_INCLUDE_DIRS} ${GLOG_INCLUDE_DIRS} ${HEADERS})
+include_directories(${LMDB_INCLUDE_DIR} ${ZMQ_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} ${GFLAGS_INCLUDE_DIR} ${PROTOBUF_INCLUDE_DIR} ${SQLITE3_INCLUDE_DIR} ${JSONRPCCCPCLIENT_INCLUDE_DIR} ${JSONRPCCCP_CLIENT_LIBRARY} ${JSONRPCCCP_SERVER_LIBRARY} ${JSONRPCCCP_COMMON_LIBRARY}${JSONCPP_INCLUDE_DIR} ${XAYAUTIL_INCLUDE_DIRS} ${XAYAGAME_INCLUDE_DIRS} ${GLOG_INCLUDE_DIRS} ${HEADERS})
 set(SOURCE_FILES xayawrap.cpp)
 
 add_library(xayawrap SHARED ${SOURCE_FILES})
 add_library(xayagame STATIC IMPORTED)
+add_library(xayautil STATIC IMPORTED)
 add_library(jsoncpp STATIC IMPORTED)
 add_library(glog STATIC IMPORTED)
 add_library(gflags STATIC IMPORTED)
@@ -58,6 +60,7 @@ target_include_directories (xayawrap PUBLIC ${BASE_DIR})
 
 target_link_libraries( ${PROJECT_NAME} 
 ${XAYAGAME_LIBRARY}
+${XAYAUTIL_LIBRARY}
 ${JSONCPP_LIBRARY}
 ${JSONRPCCCP_COMMON_LIBRARY}
 ${JSONRPCCCP_CLIENT_LIBRARY}
